kpw2008 :: link 변경

--- a/trunk/www-framework/kpw/template/tt/default/default.html
+++ b/trunk/www-framework/kpw/template/tt/default/default.html
@@ -8,7 +8,7 @@
                 </li>
                 <li>
                   <b>장소:</b>
-                  <p> 서울 강남역 6번 출구 토즈 강남점 (<a href="/location">위치 참조</a>) </p>
+                  <p> 서울 강남역 6번 출구 토즈 강남점 (<a href="[% c.config.url %]location">위치 참조</a>) </p>
                 </li>
                 <li>
                   <b>행사 대표:</b>
@@ -51,7 +51,7 @@
                 </li>
                 <li>
                   <b>행사 내용:</b>
-                  <p> 정규 발표(각 20분) 13개, 짧은 발표(각 5분) 8개 (<a href="/schedule">일정 참조</a>) </p>
+                  <p> 정규 발표(각 20분) 13개, 짧은 발표(각 5분) 8개 (<a href="[% c.config.url %]schedule">일정 참조</a>) </p>
                 </li>
                 <li>
                   <b>등록비:</b>
@@ -60,7 +60,7 @@
                     <li><b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
                   </ul>
                   <p>
-                    8월 11일 월요일부터 <a href="/register">이곳</a>에서 등록할 수 있습니다.
+                    8월 11일 월요일부터 <a href="[% c.config.url %]register">이곳</a>에서 등록할 수 있습니다.
                   </p>
                 </li>
                 <li>
