--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -9,7 +9,7 @@
 [% END %]
               </ul>
 [% END %] 
-              <form action="/register/do" method="post" id="register-form">
+              <form action="[% c.config.url %]register/do" method="post" id="register-form">
                 <fieldset>
                   <legend>사전등록</legend>
                   <dl>
