--- a/trunk/www-framework/kpw/template/tt/register/process.html
+++ b/trunk/www-framework/kpw/template/tt/register/process.html
@@ -5,7 +5,7 @@
 
    아래의 버튼을 눌러서 참가확정! 하세요~  
    
-   <form action="/regist/complete" method="post">
+   <form action="[% c.config.url %]register/complete" method="post">
    <input type="hidden" name="ukey" value="[% ukey %]">
    <input type="hidden" name="action" value="regist">
    <input type="submit" value="참가확정">
