--- a/trunk/www-framework/kpw/template/tt/user/default.html
+++ b/trunk/www-framework/kpw/template/tt/user/default.html
@@ -8,7 +8,7 @@
   [% END %]
               </ul>
   [% END %] 
-              <form action="/user/do" method="post" id="register-form">
+              <form action="[% c.config.url %]user/confirm" method="post" id="register-form">
                 <fieldset>
                   <legend>등록확인</legend>
                   <dl>
