--- a/www-framework/kpw/html/css/import.css
+++ b/www-framework/kpw/html/css/import.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url("reset.css");
-@import url("base.css");
-@import url("style.css");
-@import url("layout.css");
+@import url("./reset.css");
+@import url("./base.css");
+@import url("./style.css");
+@import url("./layout.css");
