sponsor image path

--- a/trunk/www-framework/kpw/template/tt/_include/sponsors.html
+++ b/trunk/www-framework/kpw/template/tt/_include/sponsors.html
@@ -3,31 +3,31 @@
               <div id="gold-sponsors">
                 <h3>Gold Sponsors</h3>
                 <ul>
-                  <li> <a href="http://www.nhncorp.com"> <img src="/images/banners/nhn.png" alt="NHN Corp." /> </a> </li>
+                  <li> <a href="http://www.nhncorp.com"> <img src="[% c.config.url %]images/banners/nhn.png" alt="NHN Corp." /> </a> </li>
                 </ul>
               </div>
               <div id="silver-sponsors">
                 <h3>Silver Sponsors</h3>
                 <ul>
-                  <li> <a href="http://www.fossa.or.kr"> <img src="/images/banners/FOSSA.png" alt="Free OpenSource Software Association" /> </a> </li>
-		  <li> <a href="http://www.kobic.re.kr"> <object width="120" height="40"> <embed src="/images/banners/kobic.swf" type="application/x-shockwave-flash" width="120" height="40"> </embed> </object> </a> </li>
+                  <li> <a href="http://www.fossa.or.kr"> <img src="[% c.config.url %]images/banners/FOSSA.png" alt="Free OpenSource Software Association" /> </a> </li>
+		  <li> <a href="http://www.kobic.re.kr"> <object width="120" height="40"> <embed src="[% c.config.url %]images/banners/kobic.swf" type="application/x-shockwave-flash" width="120" height="40"> </embed> </object> </a> </li>
                 </ul>
               </div>
               <div id="bronze-sponsors">
                 <h3>Bronze Sponsors</h3>
                 <ul>
-                  <li> <a href="http://www.scitech.co.kr"> <img src="/images/banners/scitech.jpg" alt="SciTech Media, Inc." /> </a> </li>
+                  <li> <a href="http://www.scitech.co.kr"> <img src="[% c.config.url %]images/banners/scitech.jpg" alt="SciTech Media, Inc." /> </a> </li>
 
-                  <li> <a href="http://www.hanb.co.kr"> <img src="/images/banners/hanbit.png" alt="Hanbit Media, Inc." /> </a> </li>
+                  <li> <a href="http://www.hanb.co.kr"> <img src="[% c.config.url %]images/banners/hanbit.png" alt="Hanbit Media, Inc." /> </a> </li>
                 </ul>
               </div>
 
               <div id="community-sponsors">
                 <h3>Community Sponsors</h3>
                 <ul>
-                  <li> <a href="http://kldp.org"> <img src="/images/banners/kldp.png" alt="KLDP" /> </a> </li>
-                  <li> <a href="http://www.perlmania.or.kr"> <img src="/images/banners/perlmania.png" alt="Perl Mania" /> </a> </li>
-                  <li> <a href="http://www.perl.or.kr"> <img src="/images/banners/perlorkr.png" alt="한국 펄 사용자 모임" /> </a> </li>
+                  <li> <a href="http://kldp.org"> <img src="[% c.config.url %]images/banners/kldp.png" alt="KLDP" /> </a> </li>
+                  <li> <a href="http://www.perlmania.or.kr"> <img src="[% c.config.url %]images/banners/perlmania.png" alt="Perl Mania" /> </a> </li>
+                  <li> <a href="http://www.perl.or.kr"> <img src="[% c.config,url %]images/banners/perlorkr.png" alt="한국 펄 사용자 모임" /> </a> </li>
                 </ul>
               </div>
             </div> <!-- sponsors -->
