--- a/trunk/www-framework/kpw/html/css/layout.css
+++ b/trunk/www-framework/kpw/html/css/layout.css
@@ -29,7 +29,7 @@
     margin: 0 auto;
     padding-top: 120px;
     width: 860px;
-    background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+    background: transparent url(./../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
 }
 .clearfix {
     _height: 1px;
@@ -83,14 +83,14 @@ div.box {
 }
 div.box_top {
     height: 30px;
-    background: transparent url(/images/box_top.png) no-repeat scroll center bottom !important;
+    background: transparent url(./../images/box_top.png) no-repeat scroll center bottom !important;
 }
 div.box_middle {
     padding-bottom: 20px;
-    background: transparent url(/images/box_middle.png) repeat-y scroll center top !important;
+    background: transparent url(./../images/box_middle.png) repeat-y scroll center top !important;
 }
 div.box_bottom {
     padding-top: 20px;
     height: 150px;
-    background: transparent url(/images/box_bottom.png) no-repeat scroll center top !important;
+    background: transparent url(./../images/box_bottom.png) no-repeat scroll center top !important;
 }
