--- a/trunk/www-framework/kpw/template/mail/regist.tt
+++ b/trunk/www-framework/kpw/template/mail/regist.tt
@@ -1,11 +1,23 @@
-Korean Perl Workshop 2008 등록 확인 전자우편
+Korean Perl Workshop 2008 사전 등록 확인
 
-[% param.name %] 님,
-Korean Perl Workshop 2008 에 관심을 보여주셔서 감사합니다.
+Korean Perl Workshop 2008 (KPW2008) 신청 해주셔서 고맙습니다!
 
-아래의 링크를 통해서 사전등록을 진행해주세요.
+사전 등록을 계속 진행하기 위해 아래 링크를 클릭해주세요.
+만약 클릭이 되지 않는다면, 브라우저의 주소창에 입력해서 방문해주세요.
 
 http://event.perl.kr/kpw2008/register/process/?ukey=[% param.digest %]
 
-_____
- Korean Perl Workshop 2008 준비위원회
+위의 링크로 들어가셔서 나오는 페이지의
+안내를 따라 사전 등록을 완료하시면 됩니다.
+
+등록 과정에 어려움이 있거나, 문제가 발생해서 도움이 필요하시면
+아래의 전자우편 주소로 연락을 주세요.
+
+korean.perl.workshop@gmail.com
+
+KPW2008이 즐겁고 유익한 시간이 될 수 있도록 최선을 다하겠습니다.
+고맙습니다! :-)
+
+----
+
+Korean Perl Workshop STAFF 일동
