--- a/www-framework/kpw/template/tt/_include/sponsors.html
+++ b/www-framework/kpw/template/tt/_include/sponsors.html
@@ -27,7 +27,7 @@
                 <ul>
                   <li> <a href="http://kldp.org"> <img src="[% c.config.url %]images/banners/kldp.png" alt="KLDP" /> </a> </li>
                   <li> <a href="http://www.perlmania.or.kr"> <img src="[% c.config.url %]images/banners/perlmania.png" alt="Perl Mania" /> </a> </li>
-                  <li> <a href="http://www.perl.or.kr"> <img src="[% c.config,url %]images/banners/perlorkr.png" alt="한국 펄 사용자 모임" /> </a> </li>
+                  <li> <a href="http://www.perl.or.kr"> <img src="[% c.config.url %]images/banners/perlorkr.png" alt="한국 펄 사용자 모임" /> </a> </li>
                 </ul>
               </div>
             </div> <!-- sponsors -->
