--- a/www-framework/kpw/template/tt/register/do.html
+++ b/www-framework/kpw/template/tt/register/do.html
@@ -1,4 +1,14 @@
 
+<div>
+  <p>
+    사전 등록 진행을 계속하기 위한 링크 주소를 담은 전자우편을 발송했습니다.
+    바로 이전의 양식에 입력하신 전자우편 계정을 확인하셔서 첨부한 링크를
+    따라 남은 등록 절차를 진행해주세요. :-)
+  </p>
 
-  등록진행을 위한 링크를 메일로 보냈습니다. <br/>
-  메일의 링크를 따라 등록을 진행해주세요. <br/>
+  <p>
+    전자우편 서버의 설정에 따라 약간의 지연이 있을수도 있습니다.
+    너무 오랫동안 메일이 오지 않아서 등록 진행에 어려움이 있으신 분께서는
+    korean.perl.workshop _AT_ gmail _DOT_ com 으로 연락주세요. :-)
+  </p>
+</div>
