--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -47,7 +47,7 @@
                 </fieldset>
               </form>
             </div>
-            <div class="registration">
+            <div class="registration" id="status">
               <h3>신청자 현황</h3>
               <p>현재 <em>[% users.size || 0 %]</em>명 등록중입니다.</p>
 [% IF users.size %]
