--- a/trunk/www-framework/kpw/template/mail/regist.tt
+++ b/trunk/www-framework/kpw/template/mail/regist.tt
@@ -5,7 +5,7 @@ Korean Perl Workshop 2008 (KPW2008) 신청 해주셔서 고맙습니다!
 사전 등록을 계속 진행하기 위해 아래 링크를 클릭해주세요.
 만약 클릭이 되지 않는다면, 브라우저의 주소창에 입력해서 방문해주세요.
 
-[% c.config.url %]/register/process/?ukey=[% param.digest %]
+[% c.config.url %]register/process/?ukey=[% param.digest %]
 
 위의 링크로 들어가셔서 나오는 페이지의
 안내를 따라 사전 등록을 완료하시면 됩니다.
