--- a/www-framework/kpw/template/tt/register/complete.html
+++ b/www-framework/kpw/template/tt/register/complete.html
@@ -1,44 +1,31 @@
-
-<h1> 사전 등록을 완료했습니다! 입금 후 참가 확정으로 상태가 변합니다. </h1>
-
-<div>
-  <p>
-    [% user.name %] 님,
-  </p>
-
-  <p>
-    Korean Perl Workshop 2008 : Rising Perl 사전 등록을 완료했습니다.
-    현재 사전 등록을 마치신 상태이며, 등록비 입금 후 입금 확인이 끝나면
-    [사전 등록] 상태에서 [참가 확정] 상태가 됩니다.
-  </p>
-
-  <p>
-    입금은 행사 3일 전인 8월 20일 수요일까지 완료해주셔야 [참가 확정]
-    상태가 되며, 8월 20일 이후까지 입금이 참가 확정을 못하실 경우에는
-    사전 등록 취소가 되어 대기자가 있다면 다음 대기자 분께로 기회가 넘어가며,
-    대기자가 없을 경우 행사 당일 현장 등록을 하실 분께로 기회가 넘어갑니다.
-  </p>
-
-  <p>
-    입금 정보
-  </p>
-  <ul>
-    <li>은행: 씨티은행</li>
-    <li>계좌: 188-01814-263-01</li>
-    <li>예금주: 김도형키디(KPW2008)</li>
-  </ul>
-
-  <p>
-    사전 등록과 관련한 궁금한 점이나, 입금과 관련해 도움이 필요하시면
-    아래의 전자우편 주소로 연락을 주세요.
-  </p>
-
-  <p>
-    korean.perl.workshop@gmail.com
-  </p>
-
-  <p>
-    KPW2008이 즐겁고 유익한 시간이 될 수 있도록 최선을 다하겠습니다.
-    고맙습니다! :-)
-  </p>
-</div>
+            <h1>사전 등록을 완료했습니다!</h1>
+            <div class="news">
+              <p><em>[% user.name %]</em> 님,</p>
+              <p>
+                Korean Perl Workshop 2008 : Rising Perl 사전 등록을 완료했습니다.
+                현재 사전 등록을 마치신 상태이며, 등록비 입금 후 입금 확인이 끝나면
+                [사전 등록] 상태에서 [참가 확정] 상태가 됩니다.
+              </p>
+              <p>
+                입금은 행사 3일 전인 8월 20일 수요일까지 완료해주셔야 [참가 확정]
+                상태가 되며, 8월 20일 이후까지 입금이 참가 확정을 못하실 경우에는
+                사전 등록 취소가 되어 대기자가 있다면 다음 대기자 분께로 기회가 넘어가며,
+                대기자가 없을 경우 행사 당일 현장 등록을 하실 분께로 기회가 넘어갑니다.               </p>
+              <p>입금 정보</p>
+              <ul>
+                <li>은행: 씨티은행</li>
+                <li>계좌: 188-01814-263-01</li>
+                <li>예금주: 김도형키디(KPW2008)</li>
+              </ul>
+              <p>
+                사전 등록과 관련한 궁금한 점이나, 입금과 관련해 도움이 필요하시면
+                아래의 전자우편 주소로 연락을 주세요.
+              </p>
+              <p>
+                <a href="mailto:korean.perl.workshop@gmail.com">korean.perl.workshop@gmail.com</a>
+              </p>
+              <p>
+                KPW2008이 즐겁고 유익한 시간이 될 수 있도록 최선을 다하겠습니다.
+                고맙습니다! :-)
+              </p>
+            </div>
