--- a/trunk/www-framework/kpw/template/tt/register/complete.html
+++ b/trunk/www-framework/kpw/template/tt/register/complete.html
@@ -28,4 +28,5 @@
                 KPW2008이 즐겁고 유익한 시간이 될 수 있도록 최선을 다하겠습니다.
                 고맙습니다! :-)
               </p>
+              <p<a href="[% c.config.url %]register#status">등록현황 확인</a></p>
             </div>
