입금 후 참석 불가와 관련한 정책 추가

--- a/trunk/www-framework/kpw/template/tt/register/complete.html
+++ b/trunk/www-framework/kpw/template/tt/register/complete.html
@@ -10,7 +10,8 @@
                 입금은 행사 3일 전인 8월 20일 수요일까지 완료해주셔야 [참가 확정]
                 상태가 되며, 8월 20일 이후까지 입금이 참가 확정을 못하실 경우에는
                 사전 등록 취소가 되어 대기자가 있다면 다음 대기자 분께로 기회가 넘어가며,
-                대기자가 없을 경우 행사 당일 현장 등록을 하실 분께로 기회가 넘어갑니다.               </p>
+                대기자가 없을 경우 행사 당일 현장 등록을 하실 분께로 기회가 넘어갑니다.
+              </p>
               <p>입금 정보</p>
               <ul>
                 <li>은행: 씨티은행</li>
@@ -23,6 +24,11 @@
               </p>
               <p>
                 <a href="mailto:korean.perl.workshop@gmail.com">korean.perl.workshop@gmail.com</a>
+              </p>
+              <p>
+                입금완료 후 참가 확정을 하신 상태에서 혹시라도 워크샵 당일 행사에
+                참석하지 못하신 경우 등록비는 환불이 되지 않으나 대신 KPW 기념 티셔츠와
+                기념품을 같이 배송해드립니다.
               </p>
               <p>
                 KPW2008이 즐겁고 유익한 시간이 될 수 있도록 최선을 다하겠습니다.
