--- a/www-framework/kpw/template/tt/register/do.html
+++ b/www-framework/kpw/template/tt/register/do.html
@@ -8,7 +8,7 @@
               </p>
               <p>
                 전자우편 서버의 설정에 따라 약간의 지연이 있을수도 있습니다.
-                너무 오랫동안 메일이 오지 않아서 등록 진행에 어려움이 있으신 분께서는
+                너무 오랫동안 전자우편이 오지 않아 등록 진행에 어려움이 있으신 분께서는
                 <a href="mailto:krean.perl.workshop@gmail.com">korean.perl.workshop _AT_ gmail _DOT_ com</a> 으로 연락주세요. :-)
               </p>
               <p<a href="[% c.config.url %]register#status">등록현황 확인</a></p>
