--- a/www-framework/kpw/template/tt/default/faq.html
+++ b/www-framework/kpw/template/tt/default/faq.html
@@ -7,15 +7,28 @@
                 <p>
                   <b>A:</b>
                   현장 등록비는 청소년 및 학생(대학원생 포함)은 1만원,
-		  그외의 경우(직장인) 2만원 입니다. 사전 등록을 하실 경우
-		  50%의 할인 혜택이 있습니다.
-		  행사 10일 전부터 사전 등록을 시작하며 선착순 마감 예정입니다.
+                  그외의 경우(직장인) 2만원 입니다. 사전 등록을 하실 경우
+                  50%의 할인 혜택이 있습니다.
+                  행사 10일 전부터 사전 등록을 시작하며 선착순 마감 예정입니다.
                 </p>
                 <ul>
                   <b>등록비 :</b>
                   <li> <b>사전등록</b>: 청소년 및 학생(대학원생 포함)  5,000원 직장인 10,000원 </li>
                   <li> <b>현장등록</b>: 청소년 및 학생(대학원생 포함) 10,000원 직장인 20,000원 </li>
                 </ul>
+              </div>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 사전 등록을 하고 입금을 한 후에 행사 당일 불참아면 어떻게 되나요?
+              </p>
+              <div class="answer">
+                <p>
+                  <b>A:</b>
+                    입금완료 후 참가 확정을 하신 상태에서 혹시라도 워크샵 당일 행사에
+                    참석하지 못하신 경우 등록비는 환불이 되지 않으나 대신
+                    KPW 기념 티셔츠와 기념품을 같이 배송해드립니다.
+                </p>
               </div>
             </div>
             <div class="faq">
