--- a/www-framework/kpw/template/tt/default/faq.html
+++ b/www-framework/kpw/template/tt/default/faq.html
@@ -33,6 +33,32 @@
             </div>
             <div class="faq">
               <p class="question">
+                <b>Q:</b> 행사 참석 가능 인원은 몇 명인가요?
+              </p>
+              <div class="answer">
+                <p>
+                  <b>A:</b>
+                    80명입니다. 80명 중에서 발표자와 스폰서 쿼터를 적용할 경우
+                    현재 약 50명이 일반 참가자로 참석 가능합니다.
+                    
+                </p>
+              </div>
+            </div>
+            <div class="faq">
+              <p class="question">
+                <b>Q:</b> 노트북을 가져가려고 합니다. 행사장에서 전원을 이용할 수 있나요?
+              </p>
+              <div class="answer">
+                <p>
+                  <b>A:</b>
+                    사용 가능합니다. 현재 최소 30개의 컨센트를 이용할 수 있게 배치할
+                    예정입니다. 그럼에도 불구하고 전원 컨센트가 부족할 경우 행사진행
+                    요원에게 문의 바랍니다.
+                </p>
+              </div>
+            </div>
+            <div class="faq">
+              <p class="question">
                 <b>Q:</b> 행사 방문을 위한 주차가 가능한지 알고 싶습니다.
               </p>
               <div class="answer">
