--- a/www-framework/kpw/template/tt/register/process.html
+++ b/www-framework/kpw/template/tt/register/process.html
@@ -15,7 +15,7 @@
               <p>
                 죄송합니다. 전자우편으로 보내드린 고유키 값에 문제가 있습니다.<br />이 문제를 해결하기 위해서 아래의 전자우편 주소로 연락을 주세요.
               </p>
-              <p><a href="mailto:korean.perl.workshop@gmail.com">korean.perl.workshop@gmail.com</p>
+              <p><a href="mailto:korean.perl.workshop@gmail.com">korean.perl.workshop@gmail.com</a></p>
             </div>
 [% ELSE %]
             <div class="news">
