--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -1,4 +1,12 @@
             <h1>사전등록</h1>
+            <h3>쿼터 참석자분들은 따로 신청받습니다!</h3>
+            <div>
+              <p>
+                발표자 및 스폰서 쿼터를 통해 참석하시는 분들께서는
+                아래 신청양식을 이용하지 마시고 신청을 대행해주시는
+                담당자 분들을 통해 참석 신청 해주시기 바랍니다. :-)
+              </p>
+            </div>
             <div class="form">
               <h3>신청양식</h3>
               <p><span class="required">*</span>는 필수입니다.</p>
@@ -13,13 +21,13 @@
                 <fieldset>
                   <legend>사전등록</legend>
                   <dl>
-		    <dt><span class="required">*</span><label for="email">email</label>:&nbsp;</dt><dd><input type="text" name="email" size="30" id="email" class="long" /></dd>
-		    <dt><span class="required">*</span><label for="password">비밀번호</label>:&nbsp;</dt><dd><input type="password" name="password" size="10" id="password" class="medium" /></dd>
-		    <dt><span class="required">*</span><label for="password_confirm">비밀번호(확인)</label>:&nbsp;</dt><dd><input type="password" name="password_confirm" size="10" id="password_confirm" class="medium" /></dd>
-		    <dt><span class="required">*</span><label for="name">이름</label>:&nbsp;</dt><dd><input type="text" name="name" size="10" id="name" class="medium" /></dd>
-		    <dt><span class="required">*</span><label for="nickname">닉네임</label>:&nbsp;</dt><dd><input type="text" name="nick" size="10" id="nickname" class="medium" /></dd>
-		    <dt><span class="required">*</span><label for="mobile">휴대전화</label>:&nbsp;</dt><dd><dd><input type="text" name="phone" size="20" id="mobile" class="medium" /></dd>
-		  
+                    <dt><span class="required">*</span><label for="email">email</label>:&nbsp;</dt><dd><input type="text" name="email" size="30" id="email" class="long" /></dd>
+                    <dt><span class="required">*</span><label for="password">비밀번호</label>:&nbsp;</dt><dd><input type="password" name="password" size="10" id="password" class="medium" /></dd>
+                    <dt><span class="required">*</span><label for="password_confirm">비밀번호(확인)</label>:&nbsp;</dt><dd><input type="password" name="password_confirm" size="10" id="password_confirm" class="medium" /></dd>
+                    <dt><span class="required">*</span><label for="name">이름</label>:&nbsp;</dt><dd><input type="text" name="name" size="10" id="name" class="medium" /></dd>
+                    <dt><span class="required">*</span><label for="nickname">닉네임</label>:&nbsp;</dt><dd><input type="text" name="nick" size="10" id="nickname" class="medium" /></dd>
+                    <dt><span class="required">*</span><label for="mobile">휴대전화</label>:&nbsp;</dt><dd><dd><input type="text" name="phone" size="20" id="mobile" class="medium" /></dd>
+
                     <dt><span class="required">*</span>티셔츠 사이즈:&nbsp;</dt>
                     <dd>
                       <select name="tshirt" class="short">
@@ -31,17 +39,17 @@
                         <option value="XXXL(110)">XXXL(110)</option>
                       </select>
                     </dd>
-		    <dt><span class="required">*</span>직업:&nbsp;</dt>
-		    <dd>
+                    <dt><span class="required">*</span>직업:&nbsp;</dt>
+                    <dd>
                       <select name="type" class="short">
-			<option value="worker">직장인</option>
-			<option value="student">학생 및 청소년</option>
-		      </select>
+                        <option value="worker">직장인</option>
+                        <option value="student">학생 및 청소년</option>
+                      </select>
                     </dd>
-		    <dt><label for="location">소속</label>:&nbsp;</dt>
-		    <dd><input type="text" name="location" size="50" id="location" class="long" /></dd>
-		    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
-		    <dd><textarea rows="5" id="comment" name="comment" class="long"></textarea></dd>
+                    <dt><label for="location">소속</label>:&nbsp;</dt>
+                    <dd><input type="text" name="location" size="50" id="location" class="long" /></dd>
+                    <dt><label for="comment">코멘트</label>:&nbsp;</dt>
+                    <dd><textarea rows="5" id="comment" name="comment" class="long"></textarea></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
