--- a/trunk/www-framework/kpw/html/css/style.css
+++ b/trunk/www-framework/kpw/html/css/style.css
@@ -56,6 +56,7 @@
 #main .required {
     margin-right: 0.3em;
     color: #c00f0f;
+    font-weight: bold;
 }
 #main .registration table {
     border:1px solid #AAAAAA;
