--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -31,6 +31,7 @@
                     <dt><span class="required">*</span>티셔츠 사이즈:&nbsp;</dt>
                     <dd>
                       <select name="tshirt" class="short">
+                        <option value=""></option>
                         <option value="S(85)">S(85)</option>
                         <option value="M(90)">M(90)</option>
                         <option value="L(95)">L(95)</option>
@@ -42,6 +43,7 @@
                     <dt><span class="required">*</span>직업:&nbsp;</dt>
                     <dd>
                       <select name="type" class="short">
+                        <option value=""></option>
                         <option value="worker">직장인</option>
                         <option value="student">학생 및 청소년</option>
                       </select>
