speakers and sponsers are confirmed, too!

--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -74,7 +74,7 @@
                 </thead>
                 <tbody>
 [% FOREACH user IN users %]
-                  <tr[% ' class="confirmed"' IF user.confirm == 'complete' %]>
+                  <tr[% ' class="confirmed"' IF user.confirm == 'complete' || user.confirm == 'speaker' || user.confirm == 'sponser' %]>
                     <td class="number">[% loop.index + 1 | html %]</td>
                     <td>[% user.name | html %]</td>
                     <td>[% user.nick | html %]</td>
