additional fix to the border_middle image

--- a/trunk/www-framework/kpw/html/css/layout.css
+++ b/trunk/www-framework/kpw/html/css/layout.css
@@ -87,7 +87,7 @@ div.box_top {
 }
 div.box_middle {
     padding-bottom: 20px;
-    background: transparent url(./../images/box_middle.png) repeat-y scroll center top !important;
+    background: transparent url(./../images/box_middle.gif) repeat-y scroll center top !important;
 }
 div.box_bottom {
     padding-top: 20px;
