--- a/trunk/www-framework/kpw/template/tt/register/complete.html
+++ b/trunk/www-framework/kpw/template/tt/register/complete.html
@@ -14,9 +14,9 @@
               </p>
               <p>입금 정보</p>
               <ul>
-                <li>은행: 씨티은행</li>
-                <li>계좌: 188-01814-263-01</li>
-                <li>예금주: 김도형키디(KPW2008)</li>
+                <li><span class="property">은행</span>: 씨티은행</li>
+                <li><span class="property">계좌</span>: 188-01814-263-01</li>
+                <li><span class="property">예금주</span>: 김도형키디(KPW2008)</li>
               </ul>
               <p>
                 사전 등록과 관련한 궁금한 점이나, 입금과 관련해 도움이 필요하시면
